[gd_scene load_steps=11 format=3 uid="uid://c7mpekeyrxs4t"]

[ext_resource type="Script" path="res://scripts/UI.gd" id="1_mgvh1"]
[ext_resource type="Texture2D" uid="uid://b6cfk8i7jrvjt" path="res://assets/torpedo.png" id="2_f8jn1"]
[ext_resource type="Texture2D" uid="uid://bxhcjk4qim0oc" path="res://assets/railgun_shell.png" id="3_ws1ut"]
[ext_resource type="Texture2D" uid="uid://dw1srebfa2mio" path="res://icon.svg" id="4_aprwb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsslw"]
bg_color = Color(0.160784, 0.160784, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0ojh"]
bg_color = Color(1, 0.241742, 0.321382, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajsdk"]
bg_color = Color(0.219608, 0.243137, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wykgx"]
bg_color = Color(0.341176, 0.321569, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvu4m"]
bg_color = Color(0.160784, 0.160784, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n8yr"]
bg_color = Color(0, 0.803922, 0.384314, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mgvh1")

[node name="TopLeft" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 32.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="PauseButton" type="Button" parent="TopLeft"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 32.0
text = "Menu"

[node name="TopRight" type="ColorRect" parent="."]
offset_left = 512.0
offset_right = 640.0
offset_bottom = 128.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="Left Side" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_bottom = 0.0125
offset_top = 64.0
offset_right = 64.0
offset_bottom = 504.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 32
alignment = 2

[node name="Torpedo" type="Button" parent="Left Side"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_f8jn1")
icon_alignment = 1

[node name="Railgun" type="Button" parent="Left Side"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_ws1ut")
icon_alignment = 1

[node name="PDC" type="Button" parent="Left Side"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_aprwb")
icon_alignment = 1
expand_icon = true

[node name="BottomLeft" type="ColorRect" parent="."]
offset_top = 544.0
offset_right = 192.0
offset_bottom = 640.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="BottomLeft/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Container" type="VBoxContainer" parent="BottomLeft/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 2

[node name="HealthBar" type="ProgressBar" parent="BottomLeft/VBoxContainer/Container"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_nsslw")
theme_override_styles/fill = SubResource("StyleBoxFlat_y0ojh")
step = 1.0
value = 50.0

[node name="MovementBar" type="ProgressBar" parent="BottomLeft/VBoxContainer/Container"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ajsdk")
theme_override_styles/fill = SubResource("StyleBoxFlat_wykgx")
max_value = 4.0
step = 1.0
value = 4.0

[node name="ActionBar" type="ProgressBar" parent="BottomLeft/VBoxContainer/Container"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xvu4m")
theme_override_styles/fill = SubResource("StyleBoxFlat_3n8yr")
step = 1.0
value = 75.0

[node name="BottomMiddle" type="ColorRect" parent="."]
offset_left = 224.0
offset_top = 576.0
offset_right = 480.0
offset_bottom = 640.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="BottomRight" type="ColorRect" parent="."]
offset_left = 512.0
offset_top = 576.0
offset_right = 640.0
offset_bottom = 640.0
color = Color(0.160784, 0.160784, 0.211765, 1)

[node name="TurnCount" type="Label" parent="BottomRight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -24.0
offset_right = 53.0
grow_horizontal = 2
grow_vertical = 2
text = "Turn Count: 0"

[node name="TurnButton" type="Button" parent="BottomRight"]
layout_mode = 0
offset_top = 40.0
offset_right = 128.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 11
text = "End Turn"

[node name="CursorRect" type="ColorRect" parent="."]
visible = false
offset_right = 97.0
offset_bottom = 32.0
color = Color(0.176471, 0.176471, 0.176471, 0.501961)

[node name="CursorLabel" type="Label" parent="CursorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -11.5
offset_right = 26.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.524167, 0, 0.85, 1)
theme_override_font_sizes/font_size = 10
text = "Cursor"

[connection signal="pressed" from="TopLeft/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Left Side/Torpedo" to="." method="_on_torpedo_pressed"]
[connection signal="pressed" from="Left Side/Railgun" to="." method="_on_railgun_pressed"]
[connection signal="pressed" from="Left Side/PDC" to="." method="_on_pdc_pressed"]
[connection signal="pressed" from="BottomRight/TurnButton" to="." method="_on_turn_button_pressed"]
